css/modules.css
.playerButton {
  position: fixed;
  top: 1rem;
  right: 1.6rem;
  z-index: 100;
}

/* App illustration */
.weatherIllustration {
  border-radius: 2rem;
  background-color: #e5e5e5;
  width: 100%;
  padding-top: 100%;
  margin-top: 2rem;
  overflow: hidden;
  position: relative;
  background-size: cover;
  background-position: 50% 50%;
  transition: all 300ms;
}

.weatherIllustration:hover {
  background-size: 110%;
}

.weatherInfo {
  margin-top: 4rem;
  text-align: center;
}

.weatherInfo__value {
  font-size: 9.6rem;
  font-weight: bold;
  letter-spacing: 0.037rem;
  display: inline-block;
}

.weatherInfo__valueSub {
  font-size: 2.4rem;
  vertical-align: baseline;
  margin-left: 1rem;
}

.weatherInfo__description {
  display: flex;
  margin-top: .5rem;
  font-size: 2rem;
  font-weight: 600;
  line-height: 1.2;
  letter-spacing: 0.075rem;
  text-align: center;
  height: 44px;
  align-items: center;
  justify-content: center;
  color: #8e8e93;
}

/* WeatherSection */
.weatherSection {
  border-radius: .8rem;
  border: solid .1rem #f2f2f7;
  background-color: rgba(255, 255, 255, 0.8);
}

.weatherSection ~ .weatherSection {
  margin-top: .5rem;
}

/* weatherTip */
.weatherTip {
  margin-top: 1.2rem;
}

.weatherTipItem {
  padding: 1.8rem 2rem 1.1rem;
  position: relative;
}

.weatherTipItem ~ .weatherTipItem {
  margin-top: 0.7rem;
}

.weatherTipItem[data-icon]::after {
  content: attr(data-icon);
  font-size: 6rem;
  position: absolute;
  right: 2rem;
  top: 50%;
  transition: all 300ms;
  transform: translate3d(0, -50%, 0);
}

.weatherTipItem[data-icon]:hover::after {
  transform: translate3d(0, -50%, 0) scale(1.2) rotate(15deg);
}

.weatherTipItem__title {
  font-size: 1.2rem;
  font-weight: 600;
  line-height: 1.33;
}

.weatherTipItem__value {
  display: block;
  margin-top: 1.3rem;
  font-size: 2.8rem;
  font-weight: bold;
  letter-spacing: 0.087rem;
  line-height: normal;
  color: #1c1c1e;
}

/* WeatherWeek */
.weatherWeekItem {
  display: flex;
  height: 4.4rem;
  align-items: center;
  padding: 0 2rem 0 1.2rem;
}

.weatherWeekItem__title {
  width: 10rem;
  font-size: 1.6rem;
  font-weight: 600;
  line-height: 1.31;
  letter-spacing: -0.032rem;
}

.weatherWeekItem__content {
  flex: 1;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.weatherWeekItem__values {
  margin-left: 2.8rem;
}

.weatherWeekItem__value {
  display: inline-block;
  text-align: right;
  width: 2.8rem;
  color: #8e8e93;
  font-size: 1.5rem;
  line-height: 1.33;
  letter-spacing: -0.024rem;
}

.weatherWeekItem__value ~ .weatherWeekItem__value {
  margin-left: .4rem;
}

.weatherWeekItem__value--active {
  color: #2c2c2c;
}

.weatherWeekItem__icons {
  margin-left: 2rem;
}

.weatherWeekItem__icon {
  font-size: 2.4rem;
  width: 2.4rem;
  height: 2.4rem;
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.weatherWeekItem__icon ~ .weatherWeekItem__icon {
  margin-left: 1.2rem;
}

.weatherWeekItem__rainy {
  color: #0a84ff;
  font-size: 1.2rem;
}

/* WeatherTimeItem */
.weatherTime {
  display: flex;
  margin-top: 1.2rem;
}

.weatherTimeItem {
  flex: 1;
  align-items: center;
  justify-content: center;
  display: flex;
  flex-direction: column;
  height: 14.2rem;
}

.weatherTimeItem__title {
  font-size: 1.6rem;
  font-weight: 600;
  line-height: 1.31;
  letter-spacing: -0.032rem;
}

.weatherTimeItem__title sub {
  font-size: 0.5em;
  margin-left: -3px;
  vertical-align: text-bottom;
}

.weatherTimeItem__icon {
  font-size: 2.4rem;
  margin: 1.6rem 0 2.0rem;
}

.weatherTimeItem__value {
  font-size: 1.5rem;
  line-height: 1.33;
  letter-spacing: -0.024rem;
  color: #2c2c2e;
}

/* Toggle Button */
.toggleButton {
  position: relative;
  z-index: 1;
}

.toggleButton__input {
  position: absolute;
  opacity: 0;
  pointer-events: none;
}

.toggleButton__label {
  cursor: pointer;
  display: block;
  position: relative;
}

.toggleButton__label::after {
  display: none;
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate3d(-50%, -50%, 0) scale(0);
  width: 60px;
  height: 60px;
  border-radius: 50%;
  opacity: 0;
  background-color: #1c1c1e;
  transition: all 300ms;
}

.toggleButton__label:focus::after,
.toggleButton__label:hover::after {
  transform: translate3d(-50%, -50%, 0) scale(1);
  opacity: 0.06;
}

.toggleButton__icon {
  display: block;
  font-size: 20px;
  position: relative;
  z-index: 2;
}

.toggleButton__container {
  position: absolute;
  opacity: 0;
  pointer-events: none;
  transition: all 300ms;
  top: 100%;
  border-radius: .8rem;
  z-index: 1;
  border: solid .1rem #f2f2f7;
  background-color: rgba(255, 255, 255, 0.8);
}

.toggleButton__input:checked ~ .toggleButton__container {
  opacity: 1;
  pointer-events: auto;
}

.locationItem {
  position: relative;
  width: 15.8rem;
  height: 4rem;
  border-radius: 3.4rem;
  box-shadow: 0 0 0 1px #d1d1d6;
  transition: all 500ms;
  display: flex;
  align-items: center;
  justify-content: center;
}

.locationItem--active {
  box-shadow: 0 0 0 2px #ff6200;
}

.locationItem__icon {
  position: absolute;
  left: 1.6rem;
  top: 50%;
  transform: translate3d(0, -50%, 0) scale(0);
  color: #ff6200;
  opacity: 0;
  font-size: 16px;
  transition: all 300ms;
}

.locationItem--active .locationItem__icon {
  transform: translate3d(0, -50%, 0) scale(1);
  opacity: 1;
}

.locationItem__input {
  opacity: 0;
  position: absolute;
  pointer-events: none;
}

.locationItem__name {
  font-size: 1.3rem;
  font-weight: 600;
  line-height: 1.38;
  letter-spacing: -0.08px;
  color: #2c2c2e;
}

.locationModule .locationItem ~ .locationItem {
  margin-top: 16px;
}

.locationModule .locationItem {
  margin: 0 auto;
}

.otherModule__title {
  font-size: 17px;
  font-weight: 600;
  line-height: 1.29;
  letter-spacing: -0.41px;
  color: #000000;
}

.otherModule .appHeader {
  box-shadow: 0 0.5px 0 0 rgba(0, 0, 0, 0.08);
}

.otherModule__content {
  display: flex;
  flex: 1;
  padding-top: 4.4rem;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.locationModule .otherModule__content {
  display: block;
  overflow-y: scroll;
  padding: 6.4rem 0 2rem;
}

.locationModule__break {
  display: none;
}

.aboutPage {
  padding: 0 6.5rem;
}

@keyframes aboutPageLogo {
  0% {
    transform: rotate(10deg);
  }
  50% {
    transform: rotate(0deg) scale(1.1);
  }
  100% {
    transform: rotate(-10deg);
  }
}

.aboutPage__logo {
  display: block;
  width: 15rem;
  height: 15rem;
  animation: aboutPageLogo 1s infinite alternate cubic-bezier(0.83, 0, 0.17, 1);
}

.aboutPage__title {
  font-size: 2.8rem;
  font-weight: bold;
  line-height: normal;
  letter-spacing: 0.87px;
  text-align: center;
  color: #1c1c1e;
  margin-top: 1.2rem;
}

.aboutPage__subject {
  font-size: 1.2rem;
  font-weight: 600;
  line-height: 1.33;
  letter-spacing: normal;
  text-align: center;
  color: #1c1c1e;
  margin-top: 1rem;
}

.aboutPage__description {
  font-size: 1.2rem;
  line-height: 1.67;
  letter-spacing: normal;
  text-align: center;
  color: #1c1c1e;
  margin-top: 3.6rem;
  word-break: keep-all;
}

@media screen and (min-width: 1200px) {
  .aboutPage {
    max-width: 570px;
    margin: 0 auto;
    padding: 0;
  }

  .otherModule {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 15;
    backdrop-filter: blur(2px);
    background-color: rgba(var(--body-bg), 0.95);
  }

  .otherModule.app {
    padding-top: 0;
    display: flex;
    flex-direction: column;
  }

  .otherModule .appHeader {
    background-color: transparent;
    filter: none;
  }

  .otherModule__title {
    font-size: 34px;
    font-weight: bold;
    line-height: 1.21;
    letter-spacing: 0.37px;
    text-align: center;
    color: #1c1c1e;
  }

  .otherModule .appHeader {
    box-shadow: none;
  }

  .locationModule .otherModule__content {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    width: 1000px;
    margin: 0 auto;
    padding-top: 0;
    align-content: center;
  }

  .locationModule__break {
    display: block;
    border: 0;
    flex-basis: 100%;
    height: 0;
  }

  .locationModule .locationItem.locationItem {
    margin: 18px;
  }

  .locationItem {
    width: 200px;
    height: 68px;
  }

  .locationItem--active .locationItem__icon,
  .locationItem__icon {
    font-size: 24px;
    left: -6px;
    transform: translate3d(-100%, -50% , 0);
  }

  .locationItem--active .locationItem__name {
    font-weight: 600;
  }

  .locationItem__name {
    position: relative;
    font-size: 17px;
    font-weight: normal;
  }

  .weatherIllustration {
    width: 1200px;
    padding-top: 0;
    height: 526px;
    margin-left: 50%;
    transform: translate3d(-50%, 0, 0);
    margin-top: 10px;
    margin-bottom: 120px;
    background-size: 100% auto;
  }

  .weatherWeekItem ~ .weatherWeekItem,
  .weatherTipItem ~ .weatherTipItem,
  .weatherSection ~ .weatherSection {
    margin-top: 10px;
  }

  .weatherTimeItem {
    height: 122px;
  }

  .weatherTimeItem__icon {
    margin-top: 10px;
    margin-bottom: 16px;
  }

  .weatherWeek {
    padding: 12px 0;
    height: 392px;
    display: flex;
    flex-direction: column;
  }

  .weatherWeekItem {
    padding-left: 27px;
    padding-right: 25px;
    flex: 1;
  }

  .weatherWeekItem__values {
    margin-left: 40px;
  }

  .weatherTime {
    padding-left: 15px;
  }

  .weatherTipItem {
    padding: 0 30px;
    height: 124px;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  .weatherTipItem[data-icon]::after {
    right: 38px;
  }

  .weatherTipItem__value {
    margin-top: 15px;
  }

  .weatherTime,
  .weatherTip {
    margin-top: 0;
  }

  .playerButton {
    top: 63px;
    right: 50%;
    margin-right: -600px;
  }

  .toggleButton__label::after {
    display: block;
  }
}

